--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "eslint": "^9.11.0",
     "eslint-plugin-react": "^7.36.1",
     "globals": "^15.9.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
