--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.11.0",
-    "eslint": "^9.11.0",
+    "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.36.1",
     "globals": "^15.9.0"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "eslint-plugin-node": "^11.1.0"
   }
 }
