--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "eslint": "^9.15.0",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3"
+  },
+  "eslintConfig": {
+    "extends": "standard"
   }
 }
