--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "globals": "^15.9.0"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "eslint-plugin-node": "^11.1.0"
+    "dotenv": "^16.4.7",
+    "eslint-plugin-node": "^11.1.0",
+    "firebase": "^11.2.0"
   }
 }
